# Makibania-Modpack-Installer

./: config.schema.json  cspell.config.yaml  index.html  package.json  vite.config.ts
.zed/: debug.json  settings.json  tasks.json
sample/: config.yaml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  downloader.rs  installer.rs  lib.rs  main.rs  modrinth.rs  state.rs
src/components/screens/: InstallerScreen.tsx  TitleScreen.tsx
src/utils/: localizer.ts
